Fix mobile alignment for #total margin

--- a/static/style.css
+++ b/static/style.css
@@ -126,7 +126,7 @@ button:hover {
 }
 
 #total{
-    margin: 0 0 0 81px;
+    margin: 0 0 0 15%;
 }
 
 #flags {
